@@ -7,7 +7,7 @@ return {
 		collisionvolumescales = "42 42 42",
 		collisionvolumetype = "BOX",
 		corpse = "DEAD",
-		energycost = 17000,
+		energycost = 23000,
 		explodeas = "largeExplosionGeneric",
 		footprintx = 4,
 		footprintz = 4,
@@ -15,7 +15,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		leavetracks = true,
-		maxacc = 0.02269,
+		maxacc = 0.02,
 		maxdec = 0.04537,
 		maxslope = 20,
 		maxwaterdepth = 20,
@@ -35,7 +35,7 @@ return {
 		turninplace = true,
 		turninplaceanglelimit = 90,
 		turninplacespeedlimit = 1.2573,
-		turnrate = 300,
+		turnrate = 250,
 		usepiececollisionvolumes = 1,
 		customparams = {
 			basename = "base",
